JumpScript/tests/baselines/reference/parser_continueTarget6.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget6.jump(2,3): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.


==== tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget6.jump (1 errors) ====
    while (true) {
      continue target;
      ~~~~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
    }